# Ccli

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  ccli  gci  globals.h  lexer.cpp  lexer.h  main.cpp  md  run_tests.sh  test.sh  utility.h  value.h
include/ccli/: :w  CcliTool.hpp  CompileExec.hpp  DeclFindingAction.hpp  DeclMatcher.hpp  DumpASTAction.hpp  ExecWriter.hpp  FindActionAdjuster.hpp  GlobalContext.hpp  HeaderSearch.hpp  IManager.hpp  IOpWriter.hpp  IWriter.hpp  IWriters.hpp  Loader.hpp  Logger.hpp  NormOpWriter.hpp  NormWriter.hpp  PreOpWriter.hpp  PreWriter.hpp  StateManager.hpp  Utility.hpp  Utils.hpp  all_template_implementations.hpp  context.hpp  exec_expr.hpp  globals.hpp  helpers.hpp  history.hpp  logger.hpp  runToolOnCode.hpp  utility.hpp
src/: CMakeLists.txt  CcliTool.cpp  CompileExec.cpp  DeclFindingAction.cpp  DeclMatcher.cpp  DumpASTAction.cpp  FindActionAdjuster.cpp  GlobalContext.cpp  HeaderSearch.cpp  IManager.cpp  IWriters.cpp  Loader.cpp  StateManager.cpp  Utility.cpp  Utils.cpp  context.cpp  exec_expr.cpp  helpers.cpp  history.cpp  main.cpp  runToolOnCode.cpp  test.cpp  tmp.cpp  utility.cpp  writers.cpp
src/writers/: ExecWriter.cpp  IWriters.cpp  NormOpWriter.cpp  NormWriter.cpp  PreOpWriter.cpp  PreWriter.cpp  helpers.cpp
test/: CMakeLists.txt  foo.cpp  integration_test.cpp  test.cpp
test/Logger/: Logger.cpp
test/Utility/: Utility.cpp
test/utility/: test.cpp
tests/: CMakeLists.txt  global_test.cpp
tests/Logger/: Logger.cpp
tests/Utility/: Utility.cpp
tmp/: a.out  tmp.cpp
